correctly renamed kit and starting the notebook

--- a/options.ipynb
+++ b/options.ipynb
@@ -2,8 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b6b6ded5-b9d6-44db-bab0-e572cf4e8e88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "18bb37ef-f6b8-4441-897a-0d911e5ed194",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a8a1e8b2-ca81-437a-bd76-a275ced76b19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functions import derivatives_kit as df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9a5490ac-3939-469f-a180-e74b8f78cbac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using seaborn style (type plt.style.available to see available styles)\n",
+    "plt.style.use(\"seaborn-dark\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5bdf0aa-a659-4559-9740-07044377a970",
    "metadata": {},
    "outputs": [],
    "source": []
