updated name BSOption class

--- a/options.ipynb
+++ b/options.ipynb
@@ -88,7 +88,7 @@
     "sigma = 0.3 \n",
     "q = 0\n",
     "\n",
-    "call = df.STKOption(\"C\", S, K, T, r, sigma, q=q)\n",
+    "call = df.BSOption(\"C\", S, K, T, r, sigma, q=q)\n",
     "call.price()"
    ]
   },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5885b439-c91c-4beb-b791-a46085d5b6f8",
    "metadata": {},
    "outputs": [
@@ -125,19 +125,19 @@
        "5.517157462257863"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "put = df.STKOption(\"P\", S, K, T, r, sigma, q=q)\n",
+    "put = df.BSOption(\"P\", S, K, T, r, sigma, q=q)\n",
     "put.price()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "855775b1-19d6-4a5d-925e-49098ffe00db",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "{'Delta': -0.41, 'Gamma': 0.04, 'Vega': 32.82}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "37584ec0-fcde-43b3-abde-04c4da016fcf",
    "metadata": {},
    "outputs": [],
@@ -254,14 +254,14 @@
     "K2 = 100\n",
     "K3 = 110\n",
     "\n",
-    "call1 = [ df.STKOption(\"C\", s, K1, T, r, sigma, q=q) for s in SS ]\n",
-    "call2 = [ df.STKOption(\"C\", s, K2, T, r, sigma, q=q) for s in SS ]\n",
-    "call3 = [ df.STKOption(\"C\", s, K3, T, r, sigma, q=q) for s in SS ]"
+    "call1 = [ df.BSOption(\"C\", s, K1, T, r, sigma, q=q) for s in SS ]\n",
+    "call2 = [ df.BSOption(\"C\", s, K2, T, r, sigma, q=q) for s in SS ]\n",
+    "call3 = [ df.BSOption(\"C\", s, K3, T, r, sigma, q=q) for s in SS ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1ffb8462-3a8f-46f0-b867-e85a8a5b4563",
    "metadata": {},
    "outputs": [],
@@ -273,12 +273,12 @@
     "sigma = 0.3 \n",
     "q = 0\n",
     "\n",
-    "Call1 = [ df.STKOption(\"C\", S, k, T, r, sigma, q=q) for k in K ]"
+    "Call1 = [ df.BSOption(\"C\", S, k, T, r, sigma, q=q) for k in K ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "eb8f50e0-564a-46d8-a5bd-b1ad24ed200e",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d889ac9c-d540-4d5e-95b6-0c3ea774b4ee",
    "metadata": {},
    "outputs": [],
@@ -375,15 +375,15 @@
     "T = [100, 20, 8, 0]\n",
     "\n",
     "# Calls and Puts\n",
-    "call1 = [df.STKOption(\"C\", s, K, T[0], r, sigma, q=q) for s in S]\n",
-    "call2 = [df.STKOption(\"C\", s, K, T[1], r, sigma, q=q) for s in S]\n",
-    "call3 = [df.STKOption(\"C\", s, K, T[2], r, sigma, q=q) for s in S]\n",
-    "call4 = [df.STKOption(\"C\", s, K, T[3], r, sigma, q=q) for s in S]"
+    "call1 = [df.BSOption(\"C\", s, K, T[0], r, sigma, q=q) for s in S]\n",
+    "call2 = [df.BSOption(\"C\", s, K, T[1], r, sigma, q=q) for s in S]\n",
+    "call3 = [df.BSOption(\"C\", s, K, T[2], r, sigma, q=q) for s in S]\n",
+    "call4 = [df.BSOption(\"C\", s, K, T[3], r, sigma, q=q) for s in S]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "441aa16b-8c18-4f26-9135-73158e40f0c8",
    "metadata": {},
    "outputs": [
@@ -459,12 +459,12 @@
     "# Calls\n",
     "S = np.linspace(80,120,25)\n",
     "#\n",
-    "calls = [ df.STKOption(\"C\", s, K, T, r, sigma, q=q) for s in S]"
+    "calls = [ df.BSOption(\"C\", s, K, T, r, sigma, q=q) for s in S]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4d611701-4700-4278-adb0-2b5fb29bd080",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
     "ax[0].plot(S, [c.price() for c in calls], label=\"\")\n",
     "\n",
     "S1 = 97\n",
-    "C1 = df.STKOption(\"C\", S1, K, T, r, sigma, q=q).price()\n",
+    "C1 = df.BSOption(\"C\", S1, K, T, r, sigma, q=q).price()\n",
     "ax[0].plot([S1, S1], [0, C1], c='red', linestyle=\"--\") \n",
     "ax[0].plot([0, S1], [C1, C1], \n",
     "           c='red', \n",
@@ -495,7 +495,7 @@
     "           label=\"$S_1={:.2f}$ - $C_1={:.2f}$\".format(S1,C1)) \n",
     "\n",
     "S2 = 103\n",
-    "C2 = df.STKOption(\"C\", S2, K, T, r, sigma, q=q).price()\n",
+    "C2 = df.BSOption(\"C\", S2, K, T, r, sigma, q=q).price()\n",
     "ax[0].plot([S2, S2], [0, C2], c='green', linestyle=\"--\") \n",
     "ax[0].plot([0, S2], [C2, C2], \n",
     "           c='green', \n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "fab3e343-f4d9-473c-9f08-83efee3a15d4",
    "metadata": {},
    "outputs": [],
@@ -580,9 +580,9 @@
     "SC_ATM = np.linspace(99,101,10)\n",
     "SC_ITM = np.linspace(101,120,25)\n",
     "#\n",
-    "calls_OTM = [ df.STKOption(\"C\", s, K, T, r, sigma, q=q) for s in SC_OTM ]\n",
-    "calls_ATM = [ df.STKOption(\"C\", s, K, T, r, sigma, q=q) for s in SC_ATM ]\n",
-    "calls_ITM = [ df.STKOption(\"C\", s, K, T, r, sigma, q=q) for s in SC_ITM ]\n",
+    "calls_OTM = [ df.BSOption(\"C\", s, K, T, r, sigma, q=q) for s in SC_OTM ]\n",
+    "calls_ATM = [ df.BSOption(\"C\", s, K, T, r, sigma, q=q) for s in SC_ATM ]\n",
+    "calls_ITM = [ df.BSOption(\"C\", s, K, T, r, sigma, q=q) for s in SC_ITM ]\n",
     "\n",
     "\n",
     "# Puts\n",
@@ -590,14 +590,14 @@
     "SP_ATM = np.linspace(99,101,10)\n",
     "SP_OTM = np.linspace(101,120,25)\n",
     "#\n",
-    "puts_ITM = [ df.STKOption(\"P\", s, K, T, r, sigma, q=q) for s in SP_ITM ]\n",
-    "puts_ATM = [ df.STKOption(\"P\", s, K, T, r, sigma, q=q) for s in SP_ATM ]\n",
-    "puts_OTM = [ df.STKOption(\"P\", s, K, T, r, sigma, q=q) for s in SP_OTM ]"
+    "puts_ITM = [ df.BSOption(\"P\", s, K, T, r, sigma, q=q) for s in SP_ITM ]\n",
+    "puts_ATM = [ df.BSOption(\"P\", s, K, T, r, sigma, q=q) for s in SP_ATM ]\n",
+    "puts_OTM = [ df.BSOption(\"P\", s, K, T, r, sigma, q=q) for s in SP_OTM ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "150e32a2-0a0d-46b1-bfaf-0a748204eabe",
    "metadata": {},
    "outputs": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "9e0259ce-ce64-4cd1-bda9-96bc0eaceb98",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "(110.5, 13.06, 10.5, 2.56)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "614c99bf-8714-47c6-983b-f7557f330cf6",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "(94.25, 3.46, 0, 3.46)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "94a4146c-6d9f-4bcd-add8-3f11c8ee74d2",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
        "(89.5, 12.19, 10.5, 1.69)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "5db966ff-9690-46ae-8104-5e157733bad4",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "(108.92, 2.69, 0, 2.69)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "d3d2349d-031a-4f6a-bd47-8f970e280677",
    "metadata": {},
    "outputs": [],
@@ -855,13 +855,13 @@
     "T = [2.5, 1.5, 0.9, 0.3, 0.1, 0.05, 0.02, 0]\n",
     "\n",
     "# Calls and Puts\n",
-    "calls = [ [df.STKOption(\"C\", s, K, t, r, sigma, q=q) for s in S] for t in T]\n",
-    "puts  = [ [df.STKOption(\"P\", s, K, t, r, sigma, q=q) for s in S] for t in T]"
+    "calls = [ [df.BSOption(\"C\", s, K, t, r, sigma, q=q) for s in S] for t in T]\n",
+    "puts  = [ [df.BSOption(\"P\", s, K, t, r, sigma, q=q) for s in S] for t in T]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "54356151-8a49-4dbc-b520-a43887f13265",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "f1f3b7e0-8c1c-4ea0-bf23-e0423a630659",
    "metadata": {},
    "outputs": [],
@@ -979,19 +979,19 @@
     "r_3 = 0.01\n",
     "\n",
     "# Calls and Puts\n",
-    "calls_1 = [ df.STKOption(\"C\", S, K, T, r_1, ss, q=q) for ss in sigmas ]\n",
-    "puts_1  = [ df.STKOption(\"P\", S, K, T, r_1, ss, q=q) for ss in sigmas ]\n",
+    "calls_1 = [ df.BSOption(\"C\", S, K, T, r_1, ss, q=q) for ss in sigmas ]\n",
+    "puts_1  = [ df.BSOption(\"P\", S, K, T, r_1, ss, q=q) for ss in sigmas ]\n",
     "\n",
-    "calls_2 = [ df.STKOption(\"C\", S, K, T, r_2, ss, q=q) for ss in sigmas ]\n",
-    "puts_2  = [ df.STKOption(\"P\", S, K, T, r_2, ss, q=q) for ss in sigmas ]\n",
+    "calls_2 = [ df.BSOption(\"C\", S, K, T, r_2, ss, q=q) for ss in sigmas ]\n",
+    "puts_2  = [ df.BSOption(\"P\", S, K, T, r_2, ss, q=q) for ss in sigmas ]\n",
     "\n",
-    "calls_3 = [ df.STKOption(\"C\", S, K, T, r_3, ss, q=q) for ss in sigmas ]\n",
-    "puts_3  = [ df.STKOption(\"P\", S, K, T, r_3, ss, q=q) for ss in sigmas ]"
+    "calls_3 = [ df.BSOption(\"C\", S, K, T, r_3, ss, q=q) for ss in sigmas ]\n",
+    "puts_3  = [ df.BSOption(\"P\", S, K, T, r_3, ss, q=q) for ss in sigmas ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "7a8e342f-11ee-4179-8526-c9b8ebad9d75",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "27f3049f-b7fa-4845-80a5-0972a6dfbc5f",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1081,7 @@
        "(6.0, 10.48)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,14 +1098,14 @@
     "q = 0\n",
     "\n",
     "# Current Call and Put price at maturity \n",
-    "C = df.STKOption(\"C\", S0, K, T, r, sigma, q=q).price()\n",
-    "P = df.STKOption(\"P\", S0, K, T, r, sigma, q=q).price()\n",
+    "C = df.BSOption(\"C\", S0, K, T, r, sigma, q=q).price()\n",
+    "P = df.BSOption(\"P\", S0, K, T, r, sigma, q=q).price()\n",
     "np.round(C,2), np.round(P,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "a606cc9d-fbec-4661-bb12-b20630607675",
    "metadata": {},
    "outputs": [],
@@ -1117,8 +1117,8 @@
     "T = 0\n",
     "\n",
     "# Calls and Puts\n",
-    "calls = [ df.STKOption(\"C\", s, K, T, r, sigma, q=q) for s in S ]\n",
-    "puts  = [ df.STKOption(\"P\", s, K, T, r, sigma, q=q) for s in S ]"
+    "calls = [ df.BSOption(\"C\", s, K, T, r, sigma, q=q) for s in S ]\n",
+    "puts  = [ df.BSOption(\"P\", s, K, T, r, sigma, q=q) for s in S ]"
    ]
   },
   {
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "e0452d27-60cb-4c71-8c11-552cf94dd33d",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "7135ce91-4d7c-4f7a-80a0-25e7949bb289",
    "metadata": {},
    "outputs": [
