renamed and added description to interactive script

--- a/options.ipynb
+++ b/options.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 527,
    "id": "b6b6ded5-b9d6-44db-bab0-e572cf4e8e88",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 528,
    "id": "18bb37ef-f6b8-4441-897a-0d911e5ed194",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 529,
    "id": "a8a1e8b2-ca81-437a-bd76-a275ced76b19",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 530,
    "id": "9a5490ac-3939-469f-a180-e74b8f78cbac",
    "metadata": {},
    "outputs": [],
@@ -83,26 +83,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "id": "d98efffe-6971-46a4-9e04-e4903256e9f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 521,
+   "id": "89b978d2-b81c-4f19-b7ef-dd2c74ccae59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 531,
    "id": "c3bc23f8-a465-4267-980b-6057df8912a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.816707911920567"
+       "6.096736604446896"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 531,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "S = 102\n",
+    "S = 100\n",
     "K = 100\n",
+    "T = 0.25\n",
     "r = 0.01\n",
-    "T = 0.3\n",
     "sigma = 0.3 \n",
     "q = 0\n",
     "\n",
@@ -112,17 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 532,
    "id": "829b18ab-d9fd-4dbd-8bb9-3a4d2fa23a86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Lambda': 7.67, 'Delta': 0.59, 'Gamma': 0.02, 'Vega': 21.75}"
+       "{'Lambda': 8.8, 'Delta': 0.54, 'Gamma': 0.03, 'Theta': -12.39, 'Vega': 19.86}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 533,
    "id": "5885b439-c91c-4beb-b791-a46085d5b6f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.517157462257863"
+       "5.847048844192912"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 533,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 534,
    "id": "855775b1-19d6-4a5d-925e-49098ffe00db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Lambda': -7.63, 'Delta': -0.41, 'Gamma': 0.02, 'Vega': 21.75}"
+       "{'Lambda': -7.93, 'Delta': -0.46, 'Gamma': 0.03, 'Theta': -11.4, 'Vega': 19.86}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 534,
      "metadata": {},
      "output_type": "execute_result"
     }
