updating strategy with multiplier

--- a/notebooks/options.ipynb
+++ b/notebooks/options.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 604,
    "id": "e5bdf0aa-a659-4559-9740-07044377a970",
    "metadata": {},
    "outputs": [],
@@ -446,52 +446,99 @@
     "        return pd.Series([0]*len(BSOption.underlying_set(0,S)), index=BSOption.underlying_set(0,S))\n",
     "        \n",
     "    \n",
-    "    def call(self, NP=+1, K=S, T=0.25, v=0.30):\n",
+    "    def call(self, NP=+1, K=S, T=0.25, v=0.30, M=100):\n",
     "        '''\n",
-    "        NP: Net Position, >0 for long positions, <0 for short positions \n",
-    "        K: Strike price\n",
-    "        T: Maturity (in years)\n",
-    "        v: Volatility\n",
+    "        - NP : Net Position, >0 for long positions, <0 for short positions \n",
+    "        - K  : Strike price\n",
+    "        - T  : Time-to-Maturity in years \n",
+    "        - v  : Volatility\n",
+    "        - M  : Multiplier of the Option (number of stocks allowed to buy/sell)\n",
     "        '''\n",
     "        # Create Call Option \n",
     "        option = BSOption(\"C\", self.S, K, T, self.r, v, q=self.q)\n",
     "        \n",
     "        # Call payoff \n",
-    "        # - T > 0: (Current prices - C) * NP\n",
-    "        # - T = 0: (max(S - K;0) - C) * NP \n",
-    "        payoffs = ( option.setprices() - option.price() ) * NP\n",
+    "        # - T > 0: (Current prices - C) * NP * M\n",
+    "        # - T = 0: (max(S - K;0) - C) * NP * M\n",
+    "        payoffs = ( option.setprices() - option.price() ) * NP * M\n",
     "        \n",
-    "        # Update current payoff strategy \n",
-    "        self.payoffs = self.payoffs + payoffs\n",
+    "        # Update strategy instruments with current instrument data\n",
+    "        self._add_to_self(\"C\", option.price(), NP, K, T, v, M, payoffs)\n",
     "        \n",
-    "        self._add_to_self(\"C\", option.price(), NP, K, T, v)\n",
-    "        \n",
+    "        # to comment when everything is ok \n",
     "        return payoffs\n",
     "\n",
     "\n",
-    "    def _add_to_self(self, CP, price, NP, K, T, v):\n",
+    "    def _add_to_self(self, CP, price, NP, K, T, v, M, payoffs):\n",
     "        '''\n",
+    "        Updates the current payoffs of the option strategy as soon as that a new \n",
+    "        option is inserted. The current list of instruments composing the \n",
+    "        strategy is also updated \n",
+    "        \n",
+    "        inputs:\n",
+    "        - CP      : Either \"C\" (Call) or \"P\" (Put)\n",
+    "        - price   : Price of the input option \n",
+    "        - NP      : Net Position, >0 for long positions, <0 for short positions \n",
+    "        - K       : Strike Price\n",
+    "        - T       : Time-to-Maturity in years \n",
+    "        - v       : Implied volatility\n",
+    "        - M       : Multiplier of the Option (number of stocks allowed to buy/sell)\n",
+    "        - payoffs : Payoff of the input option (for a set of given underlying prices)\n",
     "        '''\n",
-    "        o = BSOptStrat.describe(CP, price, NP, K, T, v)\n",
+    "        # Update current payoff strategy with new instrument payoff \n",
+    "        self.payoffs = self.payoffs + payoffs\n",
+    "        \n",
+    "        # Describe new instrument \n",
+    "        o = BSOptStrat.desc_instrument(CP, price, NP, K, T, v, M)\n",
+    "        \n",
+    "        # Concat new instrument to total strategy instrument list\n",
     "        self.instruments.append(o)\n",
     "    \n",
     "    \n",
-    "    def describe(CP, price, NP, K, T, v):\n",
+    "    def desc_instrument(CP, price, NP, K, T, v, M):\n",
     "        '''\n",
-    "        Returns a description of the input option \n",
+    "        Returns a dictionary with data of the input option \n",
+    "        \n",
+    "        inputs:\n",
+    "        - CP    : either \"C\" (Call) or \"P\" (Put)\n",
+    "        - price : price of the input option \n",
+    "        - NP    : Net Position, >0 for long positions, <0 for short positions \n",
+    "        - K     : Strike Price\n",
+    "        - T     : Time-to-Maturity in years \n",
+    "        - v     : Implied volatility\n",
+    "        - M     : Multiplier of the Option (number of stocks allowed to buy/sell)\n",
     "        '''\n",
-    "        desc = \"{} {}\".format(\"Long\" if NP >=0 else \"Short\", \"Call\" if CP == \"C\" else \"Put\")\n",
-    "        desc = desc + \"(NP={:.0f}, K={:.2f}, T={:.2f}, v={:.2f}) -> Price={:.2f}\".format(abs(NP), K, T, v, price)\n",
+    "        desc = dict()\n",
+    "        \n",
+    "        desc[\"Option\"]     = \"{} {}\".format(\"Long\" if NP >=0 else \"Short\", \"Call\" if CP == \"C\" else \"Put\")\n",
+    "        desc[\"Option\"]     = desc[\"Option\"] + \"(K={:.2f}, T={:.2f}, v={:.2f})\".format(K, T, v)\n",
+    "        #\n",
+    "        desc[\"Price\"]      = round(price,2)\n",
+    "        desc[\"Position\"]   = NP\n",
+    "        desc[\"Multiplier\"] = M\n",
+    "        \n",
+    "        \n",
     "        return desc\n",
     "        \n",
     "        \n",
+    "    def desc_strategy(self):\n",
+    "        '''\n",
+    "        '''\n",
+    "        stratcost = 0\n",
+    "        for n, o in enumerate(self.instruments):\n",
+    "            print(\"({}) {}\".format(n+1, o[\"Option\"]), end=\"\")\n",
+    "            print(\" | Price={:.2f}\".format(o[\"Price\"]), end=\"\")    \n",
+    "            print(\" | Quantity={:.0f}\".format(o[\"Position\"]))\n",
     "\n",
+    "            stratcost = stratcost + o[\"Position\"] * o[\"Price\"] * o[\"Multiplier\"]\n",
+    "            \n",
+    "        print(\"Cost of entering this strategy: {:.2f}\".format(stratcost))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 605,
    "id": "f2810752-1de0-4ba7-bfaa-0bead1aca3fc",
    "metadata": {},
    "outputs": [],
@@ -501,60 +548,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 606,
    "id": "d98efffe-6971-46a4-9e04-e4903256e9f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50.000000     -6.337215\n",
-       "50.505051     -6.337213\n",
-       "51.010101     -6.337210\n",
-       "51.515152     -6.337206\n",
-       "52.020202     -6.337201\n",
-       "                ...    \n",
-       "147.979798    42.411479\n",
-       "148.484848    42.915020\n",
-       "148.989899    43.418662\n",
-       "149.494949    43.922399\n",
-       "150.000000    44.426225\n",
+       "50.000000     -3168.607497\n",
+       "50.505051     -3168.606470\n",
+       "51.010101     -3168.605071\n",
+       "51.515152     -3168.603179\n",
+       "52.020202     -3168.600640\n",
+       "                  ...     \n",
+       "147.979798    21205.739508\n",
+       "148.484848    21457.510015\n",
+       "148.989899    21709.331137\n",
+       "149.494949    21961.199635\n",
+       "150.000000    22213.112465\n",
        "Length: 199, dtype: float64"
       ]
      },
-     "execution_count": 482,
+     "execution_count": 606,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "strat.call(NP=+1, K=100, T=0.25, v=0.30)"
+    "strat.call(NP=+5, K=100, T=0.25, v=0.30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 607,
    "id": "89b978d2-b81c-4f19-b7ef-dd2c74ccae59",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50.000000     -6.337215\n",
-       "50.505051     -6.337213\n",
-       "51.010101     -6.337210\n",
-       "51.515152     -6.337206\n",
-       "52.020202     -6.337201\n",
-       "                ...    \n",
-       "147.979798    42.411479\n",
-       "148.484848    42.915020\n",
-       "148.989899    43.418662\n",
-       "149.494949    43.922399\n",
-       "150.000000    44.426225\n",
+       "50.000000     -3168.607497\n",
+       "50.505051     -3168.606470\n",
+       "51.010101     -3168.605071\n",
+       "51.515152     -3168.603179\n",
+       "52.020202     -3168.600640\n",
+       "                  ...     \n",
+       "147.979798    21205.739508\n",
+       "148.484848    21457.510015\n",
+       "148.989899    21709.331137\n",
+       "149.494949    21961.199635\n",
+       "150.000000    22213.112465\n",
        "Length: 199, dtype: float64"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 607,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,17 +612,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 608,
    "id": "68d675e5-b627-49c4-ac3e-c8e79a50def8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Long Call(NP=1, K=100.00, T=0.25, v=0.30) -> Price=6.34']"
+       "[{'Option': 'Long Call(K=100.00, T=0.25, v=0.30)',\n",
+       "  'Price': 6.34,\n",
+       "  'Position': 5,\n",
+       "  'Multiplier': 100}]"
       ]
      },
-     "execution_count": 484,
+     "execution_count": 608,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,60 +644,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 609,
    "id": "970ad56c-42b0-4885-9875-33e674fa3796",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50.000000      31.905619\n",
-       "50.505051      31.904449\n",
-       "51.010101      31.903070\n",
-       "51.515152      31.901452\n",
-       "52.020202      31.899560\n",
-       "                 ...    \n",
-       "147.979798   -183.819014\n",
-       "148.484848   -186.225744\n",
-       "148.989899   -188.636307\n",
-       "149.494949   -191.050589\n",
-       "150.000000   -193.468481\n",
+       "50.000000     1276.224749\n",
+       "50.505051     1276.177941\n",
+       "51.010101     1276.122804\n",
+       "51.515152     1276.058087\n",
+       "52.020202     1275.982391\n",
+       "                 ...     \n",
+       "147.979798   -7352.760542\n",
+       "148.484848   -7449.029762\n",
+       "148.989899   -7545.452270\n",
+       "149.494949   -7642.023556\n",
+       "150.000000   -7738.739221\n",
        "Length: 199, dtype: float64"
       ]
      },
-     "execution_count": 485,
+     "execution_count": 609,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "strat.call(NP=-5, K=106, T=0.15, v=0.56)"
+    "strat.call(NP=-2, K=106, T=0.15, v=0.56)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 610,
    "id": "7c3c3eb6-c05f-40e8-8054-259c791ebca5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50.000000      25.568404\n",
-       "50.505051      25.567236\n",
-       "51.010101      25.565860\n",
-       "51.515152      25.564246\n",
-       "52.020202      25.562358\n",
-       "                 ...    \n",
-       "147.979798   -141.407535\n",
-       "148.484848   -143.310724\n",
-       "148.989899   -145.217644\n",
-       "149.494949   -147.128190\n",
-       "150.000000   -149.042256\n",
+       "50.000000     -1892.382748\n",
+       "50.505051     -1892.428528\n",
+       "51.010101     -1892.482267\n",
+       "51.515152     -1892.545092\n",
+       "52.020202     -1892.618249\n",
+       "                  ...     \n",
+       "147.979798    13852.978966\n",
+       "148.484848    14008.480253\n",
+       "148.989899    14163.878867\n",
+       "149.494949    14319.176079\n",
+       "150.000000    14474.373244\n",
        "Length: 199, dtype: float64"
       ]
      },
-     "execution_count": 486,
+     "execution_count": 610,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,18 +708,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 611,
    "id": "0e635194-ccd6-4c48-8444-a605bae3d6d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Long Call(NP=1, K=100.00, T=0.25, v=0.30) -> Price=6.34',\n",
-       " 'Short Call(NP=5, K=106.00, T=0.15, v=0.56) -> Price=6.38']"
+       "[{'Option': 'Long Call(K=100.00, T=0.25, v=0.30)',\n",
+       "  'Price': 6.34,\n",
+       "  'Position': 5,\n",
+       "  'Multiplier': 100},\n",
+       " {'Option': 'Short Call(K=106.00, T=0.15, v=0.56)',\n",
+       "  'Price': 6.38,\n",
+       "  'Position': -2,\n",
+       "  'Multiplier': 100}]"
       ]
      },
-     "execution_count": 487,
+     "execution_count": 611,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,19 +744,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 612,
    "id": "3d944efe-045b-44a5-a9ac-f3539bb2788f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1) Long Call(K=100.00, T=0.25, v=0.30) | Price=6.34 | Quantity=5\n",
+      "(2) Short Call(K=106.00, T=0.15, v=0.56) | Price=6.38 | Quantity=-2\n",
+      "Cost of entering this strategy: 1894.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "strat.desc_strategy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 614,
    "id": "02937b45-b5d9-4000-bf5a-34830dacc345",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1894.0"
+      ]
+     },
+     "execution_count": 614,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-5*6.34*100 +2*6.38*100"
+   ]
   },
   {
    "cell_type": "code",
