modifying class by removing useless if

--- a/notebooks/options.ipynb
+++ b/notebooks/options.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 261,
    "id": "e5bdf0aa-a659-4559-9740-07044377a970",
    "metadata": {},
    "outputs": [],
@@ -475,21 +475,23 @@
     "\n",
     "    def option_at_exp(self, CP, price, NP, K, v, M):\n",
     "        '''\n",
+    "        Calculates the payoff of the option at maturity (T=0)\n",
+    "        - CP    : either \"C\" (Call) or \"P\" (Put)\n",
+    "        - price : initial price of the option when bought/sold\n",
+    "        - NP    : Net Position, >0 for long positions, <0 for short positions \n",
+    "        - K     : Strike price\n",
+    "        - T     : Time-to-Maturity in years \n",
+    "        - v     : Volatility\n",
+    "        - M     : Multiplier of the Option (number of stocks allowed to buy/sell)\n",
     "        '''\n",
     "        # Create Option at maturity  \n",
-    "        if CP == \"C\":\n",
-    "            option = BSOption(\"C\", self.S, K, 0, self.r, v, q=self.q)\n",
-    "        else:\n",
-    "            option = BSOption(\"P\", self.S, K, 0, self.r, v, q=self.q)\n",
+    "        option = BSOption(CP, self.S, K, 0, self.r, v, q=self.q)\n",
     "\n",
     "        # Option payoff at maturity: \n",
     "        # - Call: (max(S - K;0) - C) * NP * M\n",
     "        # - Put:  (P - max(S - K;0)) * NP * M\n",
-    "        if CP == \"C\":\n",
-    "            payoffs_exp = ( option.setprices() - price ) * NP * M        \n",
-    "        else:\n",
-    "            payoffs_exp = ( option.setprices() - price ) * NP * M        \n",
-    "            \n",
+    "        payoffs_exp = ( option.setprices() - price ) * NP * M        \n",
+    "\n",
     "        # Save dataframe of payoffs at maturity of current option \n",
     "        self.update_payoffs_exp_df(payoffs_exp)\n",
     "\n",
@@ -809,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 262,
    "id": "fd5138d2-2cf2-4202-8fd5-1af4531e121d",
    "metadata": {},
    "outputs": [
@@ -858,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 263,
    "id": "dbd202d9-bb77-4dd6-834c-585f02bc9e58",
    "metadata": {},
    "outputs": [
@@ -915,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 264,
    "id": "3c4a366c-68f8-4976-9fc3-5be4a7d4dc22",
    "metadata": {},
    "outputs": [
@@ -964,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 265,
    "id": "12ac3ab0-9061-467f-8601-d6f232458f00",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 266,
    "id": "418b7d2b-8ebe-4d87-82b3-608ccb43d58f",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 267,
    "id": "ceb40ac7-de4a-43e1-a939-74b97e3cd69c",
    "metadata": {},
    "outputs": [
